--- a/readme.org
+++ b/readme.org
@@ -1,15 +1,17 @@
-#+TITLE: Hecklist
+#+TITLE: c[h]ecklist
 #+OPTIONS: H:2 TOC:1 view:showall
 
-A Haskell checklist for starting off projects, or starting over.
+A Haskell c[h]ecklist. For starting off projects, starting over, or tidying up.
 
 * Quick Start
 
-Copy hecklist.hsfiles to wherever you start a new project and, if you have stack, type:
+Copy checklist.hsfiles to wherever you start a new project and, if you have stack, type:
 
 #+begin_src zsh
-stack new foo hecklist
+stack new foo checklist
 #+end_src
+
+#+RESULTS:
 
 If you do not have stack, then first type:
 
@@ -50,16 +52,16 @@ To start from scratch, follow these steps:
 
 1. Set up a Haskell environment following the [[#Haskell-and-Environs][Haskell and Environs]] section. This includes suggestions for Doom emacs but any of the emacs preludes will also be fine.
 2. modify the [[#Templates][Templates]] and run org-babel-tangle ~C-c C-v t~
-3. Place hecklist.hsfiles where you want to create the new project and run ~stack new~ eg
+3. Place checklist.hsfiles where you want to create the new project and run ~stack new~ eg
 
   #+begin_src zsh
-  stack new foo hecklist
+  stack new foo checklist
   #+end_src
 
   Current defaults are ghc-8.10.4, lts-18.6 and Lib as the library name, but they are easily changed using stack, eg
 
   #+begin_src zsh
-  stack new foo9 hecklist -p "ghc-version:9.0.1" -p "lib-name:Foo" -p "lib-name2:Bar" -p "resolver:nightly-2021-09-02"
+  stack new foo checklist -p "ghc-version:9.0.1" -p "lib-name:Foo" -p "lib-name2:Bar" -p "resolver:nightly-2021-09-02"
   #+end_src
 
 4. code, compile and test (perhaps referring to the [[#Checklist][Checklist]] section).
@@ -67,7 +69,7 @@ To start from scratch, follow these steps:
 
 The repo should look something like [[https://github.com/tonyday567/foo][this]].
 
-* Haskell and Environs
+* Environs
 
 Setup of a modern Haskell environment is straight forward. [[https://www.haskell.org/ghcup/][ghcup]] takes care of ghc, cabal, stack, haskell-language-server and haddock executables. ~cabal~ or ~stack~ can then be used to install other tools.
 
@@ -293,9 +295,39 @@ putStrLn $ show x
 #+RESULTS:
 : 1
 
+* org-mode
+
+The [[https://orgmode.org/worg/org-contrib/babel/][babel]] functionality in org-mode is very old, and hasn't kept up with changes in haskell-mode practices. In particular, it uses the old haskell inferior mode to invoke ghci rather than the more modern haskell process methods. This could make it a touch fragile as it won't pick up standard configurations.
+
+Using org-mode is particularly helpful in development loops where rebooting ghci requires a large amount of state. A complex function, say, with intermediate results can be laid out using org-mode and state-of-debugging sessions can evolve and be remembered between sessions.
+
+It also works well as an alternative readme, with no gap between code blocks as basic tests and code blocks as usage documentation.
+
+#+begin_src haskell :results value
+:set prompt "> "
+:set -Wno-type-defaults
+:set -Wno-name-shadowing
+:set -XOverloadedStrings
+:set -XOverloadedLabels
+:set -XFlexibleContexts
+:set -XGADTs
+:set -XDataKinds
+#+end_src
+
+check
+
+#+BEGIN_SRC haskell :results value :export both
+let x = "ok"
+putStrLn x
+#+END_SRC
+
+#+RESULTS:
+: ok
+
+The [[https://orgmode.org/worg/org-contrib/babel/][babel]] functionality in org-mode is very old, and hasn't kept up with changes in haskell-mode practices. In particular, it uses the old haskell inferior mode to invoke ghci rather than the more modern haskell process methods. This could make it a touch fragile as it won't pick up standard configurations.
 * Templates
 :PROPERTIES:
-:header-args: :tangle hecklist.hsfiles
+:header-args: :tangle checklist.hsfiles
 :END:
 
 I use org-mode to stitch together a .hsfiles for use with the ~stack new~ templating system, which uses the [[http://mustache.github.io/mustache.5.html][Mustache]] specification under the hood. Values such as GitHub-name tend to be picked up in the ~/.stack/config.yaml file.
@@ -315,7 +347,7 @@ Practice varies widely, from saying nothing to all documentation being in the re
 - adds some badges for Hackage, CI and dependencies.
 - Includes a short description and basic Usage example, which in many cases should be exactly repeated in the cabal file as synopsis and description stanzas.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE readme.md #-}
 {{name}}
 ===
@@ -331,6 +363,44 @@ Usage
 ``` haskell
 import {{#lib-name}}{{lib-name}}{{#lib-name2}}.{{lib-name2}}{{/lib-name2}}{{/lib-name}}{{^lib-name}}Lib{{/lib-name}}
 ```
+#+end_src
+
+** readme.org
+
+an alterative readme.
+
+#+begin_src org :tangle checklist.hsfiles
+{-# START_FILE readme.org #-}
+
+,* {{name}}
+
+[[https://hackage.haskell.org/package/{{name}}][https://img.shields.io/hackage/v/{{name}}.svg]]
+[[https://github.com/{{github-username}}/{{name}}/actions?query=workflow%3Ahaskell-ci][https://github.com/{{github-username}}/{{name}}/workflows/haskell-ci/badge.svg]]
+
+~{{name}}~ is a new package.
+
+,* Usage
+
+,#+begin_src haskell :results output
+import {{#lib-name}}{{lib-name}}{{#lib-name2}}.{{lib-name2}}{{/lib-name2}}{{/lib-name}}{{^lib-name}}Lib{{/lib-name}}
+,#+end_src
+
+,* Development
+
+,#+begin_src haskell :results output
+:set prompt "> "
+:set -Wno-type-defaults
+:set -Wno-name-shadowing
+:set -XOverloadedStrings
+,#+end_src
+
+check
+
+,#+begin_src haskell :results output :export both
+let x = "ok"
+putStrLn x
+,#+end_src
+
 #+end_src
 
 ** [[https://www.haskell.org/cabal/][cabal]]
@@ -364,7 +434,7 @@ source-repository head
 
 ~vrom911~ has a good [[https://vrom911.github.io/blog/common-stanzas][introduction]] to common stanzas.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 common common-options
   build-depends:
     base >=4.7 && <5
@@ -384,7 +454,7 @@ common ghc-options-stanza
 
 *** library stanza
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 library
   import: common-options
   import: ghc-options-stanza
@@ -398,7 +468,7 @@ library
 
 *** executable stanza
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 executable {{name}}
   import: common-options
   import: ghc-options-stanza
@@ -412,7 +482,7 @@ executable {{name}}
 
 I've left this test stanza in for completeness, but I'm tending to drop it altogether in preference to running cabal-docspec as a separate process to compilation.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 test-suite test
   import: common-options
   import: ghc-options-stanza
@@ -431,7 +501,7 @@ I'm currently uncertain whether cabal.project should form part of the GitHub rep
 
 It does, however, form a place for things that might be needed down the track. ~allow-newer~ should be turned off before you get to uploading to haddock. GHC environment files are becoming pretty important.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE cabal.project #-}
 packages: {{name}}.cabal
 
@@ -447,7 +517,7 @@ allow-newer: true
 
 ** library
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE src/{{#lib-name}}{{lib-name}}{{#lib-name2}}/{{lib-name2}}{{/lib-name2}}{{/lib-name}}{{^lib-name}}Lib{{/lib-name}}.hs #-}
 {-# OPTIONS_GHC -Wall #-}
 {-# OPTIONS_GHC -Wno-unused-imports #-}
@@ -462,7 +532,7 @@ import Prelude
 
 ** app
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE app/app.hs #-}
 {-# OPTIONS_GHC -Wall #-}
 {-# OPTIONS_GHC -Wno-unused-imports #-}
@@ -484,7 +554,7 @@ Calling the file {{name}}.hs doesn't seem to work well, here, with the Name beco
 
 ** test
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE test/test.hs #-}
 {-# OPTIONS_GHC -Wall #-}
 {-# OPTIONS_GHC -Wno-unused-imports #-}
@@ -504,7 +574,7 @@ main =
 
 ** stack
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE stack.yaml #-}
 resolver: {{#resolver}}{{resolver}}{{/resolver}}{{^resolver}}lts-18.6{{/resolver}}
 
@@ -520,7 +590,7 @@ Everyone uses .hie these days which is some form of cache for ghc, used especial
 
 .gitattributes can help if your project is mis-labelled in GitHub due to excessive HTML or whatnot being included in the project.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE .gitignore #-}
 /.stack-work/
 /dist-newstyle/
@@ -532,7 +602,7 @@ cabal.project.local*
 /.hkgr/
 #+end_src
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE .gitattributes #-}
 other/* linguist-documentation
 #+end_src
@@ -541,13 +611,13 @@ other/* linguist-documentation
 
 In emacs, haskell-language-server uses projectile to discover the project root directory, which is indicated by an empty ~.projectile~ file.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE .projectile #-}
 #+end_src
 
 ~hls~ uses the presence of a ~stack.yaml~ file as an indication that stack should be used, and the creation of this file hard-codes cabal as the preferred compilation tool.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE hie.yaml #-}
 cradle:
   cabal:
@@ -563,7 +633,7 @@ cradle:
 
 Hard-coded BSD3.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE LICENSE #-}
 Copyright {{author-name}}{{^author-name}}Author name here{{/author-name}} (c) {{year}}{{^year}}2021{{/year}}
 
@@ -601,7 +671,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 Note that github/actions use double curly brackets, and the usual mustache delimiters are easily modified to adjust to this.
 
-#+begin_src org :tangle hecklist.hsfiles
+#+begin_src org :tangle checklist.hsfiles
 {-# START_FILE .github/workflows/Haskell-CI.yml #-}
 {{=>> <<=}}
 on: [push]
@@ -718,7 +788,7 @@ ghcup set ghc 8.10.4
   Test suite test: RUNNING...
   Test suite test: PASS
   Test suite logged to:
-  /Users/tonyday/haskell/hecklist/foo/dist-newstyle/build/x86_64-osx/ghc-8.10.4/foo-0.0.1/t/test/test/foo-0.0.1-test.log
+  /Users/tonyday/haskell/checklist/foo/dist-newstyle/build/x86_64-osx/ghc-8.10.4/foo-0.0.1/t/test/test/foo-0.0.1-test.log
   1 of 1 test suites (1 of 1 test cases) passed.
   #+end_example
 
@@ -813,6 +883,12 @@ cabal gen-bounds
   cabal haddock --enable-documentation
   #+end_src
 
+  Or you can open a single dependency with
+
+  #+begin_src sh
+  stack haddock --open xyzzy
+  #+end_src
+
 *** hoogle
 
 Create a local hoogle database.
@@ -842,7 +918,7 @@ cabal sdist
 
 #+RESULTS:
 : Wrote tarball sdist to
-: /Users/tonyday/haskell/hecklist/foo/dist-newstyle/sdist/foo-0.0.1.tar.gz
+: /Users/tonyday/haskell/checklist/foo/dist-newstyle/sdist/foo-0.0.1.tar.gz
 
 Hackage configuration for username and such is in ~/.cabal/config
 
@@ -889,7 +965,7 @@ git push origin main --force
 #+end_src
 
 #+RESULTS:
-: Reinitialized existing Git repository in /Users/tonyday/haskell/hecklist/foo/.git/
+: Reinitialized existing Git repository in /Users/tonyday/haskell/checklist/foo/.git/
 : On branch main
 : nothing to commit, working tree clean
 
@@ -905,13 +981,4 @@ Change the default branch on GitHub to main (as all branches are still not equal
 git push origin --delete master
 #+end_src
 
-* ToDo Exploration
-:BACKLINKS:
-[2021-09-16 Thu 07:58] <- [[file:~/org/refile.org::*Exploration section for hecklist.][Exploration section for hecklist.]]
-:END:
 
-sub-title: follow the types
-
-[[https://williamyaoh.com/posts/2019-06-06-how-i-read-haskell-documentation.html][How I read Haskell documentation | William Yao]]
-
-~cabal repl --package <package-name>~
